# SemanticAssembly

./: .dockerignore  .gitattributes  .gitignore  DESIGN.md  Dockerfile  LANGUAGE.md  LICENSE  README.md  eval.sh  pyproject.toml
.github/workflows/: ci.yml
benchmarks/: d1.py  study.py
benchmarks/study/: corruptions.json  questions.json  tasks_edit.json  traces.json
docs/: index.html
examples/brainworms_fib/: fib.c  fib.sasm
examples/challenging_sum_array/: sum_array.c  sum_array.s  sum_array.sasm
examples/data_demo/: data_demo.s  data_demo.sasm
examples/device_gpio/: gpio.c  gpio.s  gpio.sasm
examples/device_motor/: motor.c  motor.s  motor.sasm
examples/gauntlet_ackermann/: ackermann.c  ackermann.s  ackermann.sasm
examples/gauntlet_quicksort/: quicksort.c
examples/gauntlet_revlist/: revlist.c  revlist.s  revlist.sasm
examples/hello_world/: hello.s  hello.sasm
examples/linked/: lib.s  lib.sasm  main.s  main.sasm
examples/simple_add2/: add2.c  add2.s  (+1 more)
research/: DESIGN.md  LANGUAGE.md  OPCODES.md  TODOS.md  docs.md  examples.md  testing.md
sasm/: __init__.py  abi.tsv  cli.py  csr.tsv  emit.py  extmap.tsv  format.py  formats.tsv  interp.py  isa.py  model.py  optable.tsv  parser.py  profiles.tsv  regs.tsv  syscalls.tsv  validate.py
testing/: Dockerfile  README.md  intest.sh  run.sh
tests/: check.sh  fmt_test.py  gen_test.py  ordinal_test.py  refine_test.py  snapshot.sh  sugar_test.py  symbol_test.py  test_complete.py  test_edges.py  test_gauntlet_shakedown.py  test_interp.py  test_lint.py  test_mutation.py  test_spillrow.py  test_tierb.py
(+376 files in other folders)
